spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-istio-it/src/test/resources/istio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-fabric8-istio-it-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-fabric8-istio-it
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-fabric8-istio-it
    spec:
      serviceAccountName: spring-cloud-kubernetes-istio-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-fabric8-istio-it
          image: docker.io/springcloud/spring-cloud-kubernetes-fabric8-istio-it
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
